0.1.0
-----

Basic FITS functionality. Missing color mapping in particular.
