@@ -1,3 +1,6 @@
+
+Added support for scale factor and scale method in zuist fits descriptions.
+
 0.1.0
 -----
 
